--- a/comp1238.md
+++ b/comp1238.md
@@ -1,51 +1,51 @@
 ## **COMP1238 - Assignment 01 - Ayrden C. Defreitas - 100786881**
 
->###  **Week 1 - History of Writing**
+###  **Week 1 - History of Writing**
 >*Ideas to help with midterm*  
-	> - Concept of Monospace Fonts vs Proportional  
-	> - Concept of Serif/Sans Serif - Fonts with or without decoration  
+	 &nbsp;&nbsp;&nbsp;&nbsp;- Concept of Monospace Fonts vs Proportional  
+	 &nbsp;&nbsp;&nbsp;&nbsp;- Concept of Serif/Sans Serif - Fonts with or without decoration  
 
 >*Interesting Ideas*  
-	> - Babylonian Numerals - The simplicity with the efficiency shows human ingenuity  
-	> - The independent growth of language systems with different characters that are all trying to express the same human feelings.  
+	 &nbsp;&nbsp;&nbsp;&nbsp;- Babylonian Numerals - The simplicity with the efficiency shows human ingenuity  
+	 &nbsp;&nbsp;&nbsp;&nbsp;- The independent growth of language systems with different characters that are all trying to express the same human feelings.  
 ---
->### **Week 2 - Representing Text and Numbers in Computers**
+### **Week 2 - Representing Text and Numbers in Computers**
 >*Ideas to help with midterm*  
-	> - Standardization of Bytes   
-	> - Volatile Memory vs. Non-Volatile Memory  
-	> - Units of Measurement - Kilo(10<sup>3</sup>), Mega(10<sup>6</sup>), Giga(10<sup>9</sup>), Tera(10<sup>12</sup>)  
-
->*Interesting Ideas*
-	>- 1000 vs 1024 Confusion - Bothers me because it speaks to the lack of clarity in human speech which leads to beauty and disaster alike.  
-	>- Punch Cards - Just another point to make me feel privileged to live in our time like clean water out of a tap or not having to be concerned with where my garbage goes.  
----
->### **Week 3 - Structure of Text**
->*Ideas to help with midterm*  
-	>- Markup Languages -  Markdown, HTML, XML, YAML, Wiki Text  
-	>- Structured Data/JSON  
-	>- Browser Complexity - Rendering Engines, Web Standards, etc.  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Standardization of Bytes   
+	&nbsp;&nbsp;&nbsp;&nbsp;- Volatile Memory vs. Non-Volatile Memory  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Units of Measurement - Kilo(10<sup>3</sup>), Mega(10<sup>6</sup>), Giga(10<sup>9</sup>), Tera(10<sup>12</sup>)  
 
 >*Interesting Ideas*  
-	>- Concept of Whitespace - The amount of data within HTML that is unseen  
-	>- 1500s print of Justinian's work - How much the push for legitimacy in institutions has pushed human communication and technology  
+	&nbsp;&nbsp;&nbsp;&nbsp;- 1000 vs 1024 Confusion - Bothers me because it speaks to the lack of clarity in human speech which leads to beauty and disaster alike.  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Punch Cards - Just another point to make me feel privileged to live in our time like clean water out of a tap or not having to be concerned with where my garbage goes.  
 ---
->### **Week 4 - Manipulating Text & Text Editors**
+### **Week 3 - Structure of Text**
 >*Ideas to help with midterm*  
-	>- Word Processors vs. Text Editors  
-	>- Wildcards inputs  
-	>-  Integrated Development Environments  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Markup Languages -  Markdown, HTML, XML, YAML, Wiki Text  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Structured Data/JSON  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Browser Complexity - Rendering Engines, Web Standards, etc.  
 
 >*Interesting Ideas*  
-	>- Regex - Complex searching method  
-	>- VS Code - One of the most popular Text Editors(That this guy has to learn:raising_hand_man:)  
-	>- How computers interpret Keyboard strokes - Feels complex from my perspective but I am only *part computer*:iphone:  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Concept of Whitespace - The amount of data within HTML that is unseen  
+	&nbsp;&nbsp;&nbsp;&nbsp;- 1500s print of Justinian's work - How much the push for legitimacy in institutions has pushed human communication and technology  
 ---
->### **Week 5 - Command Line Interfaces(CLI)**
+### **Week 4 - Manipulating Text & Text Editors**
 >*Ideas to help with midterm*  
-	>- Prompt, Command, Subcommand, Option, Argument distinction  
-	>- Functionality of CLI - Level of Precision, Automation, Remote Work, Low Resource Usage, and Speed  
-	>- Secure Shell(SSH) - The ability to access other computers simply  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Word Processors vs. Text Editors  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Wildcards inputs  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Integrated Development Environments  
 
 >*Interesting Ideas*  
-	>- Origin of Gaming in text based games - Zork is the first step into the realm me and my friends find so much joy:computer:  
-	>- Windows Subsystem for Linux(WSL) - Creating a functioning subsystem seems like an incredibly useful tool, that I will explore much more:mountain_biking_man:.  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Regex - Complex searching method  
+	&nbsp;&nbsp;&nbsp;&nbsp;- VS Code - One of the most popular Text Editors(That this guy has to learn:raising_hand_man:)  
+	&nbsp;&nbsp;&nbsp;&nbsp;- How computers interpret Keyboard strokes - Feels complex from my perspective but I am only *part computer*:iphone:  
+---
+### **Week 5 - Command Line Interfaces(CLI)**
+>*Ideas to help with midterm*  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Prompt, Command, Subcommand, Option, Argument distinction  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Functionality of CLI - Level of Precision, Automation, Remote Work, Low Resource Usage, and Speed  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Secure Shell(SSH) - The ability to access other computers simply  
+
+>*Interesting Ideas*  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Origin of Gaming in text based games - Zork is the first step into the realm me and my friends find so much joy:computer:  
+	&nbsp;&nbsp;&nbsp;&nbsp;- Windows Subsystem for Linux(WSL) - Creating a functioning subsystem seems like an incredibly useful tool, that I will explore much more:mountain_biking_man:.  
